--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
 ]
 requires-python = ">=3.8"
 
+[project.scripts]
+main = "bashrunner.main:main"
+
 [dependency-groups]
 dev = [
     "pytest>=7.0.0",
@@ -16,6 +19,7 @@ dev = [
     "pytest-cov>=4.0.0",
     "ruff>=0.1.0",
     "mypy>=1.0.0",
+    "pyinstaller>=6.0.0",
 ]
 
 [build-system]
