--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.8"
 
 [project.scripts]
 main = "bashrunner.main:main"
+build = "scripts.build_app:main"
 
 [dependency-groups]
 dev = [
@@ -25,6 +26,9 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/bashrunner", "scripts"]
 
 [tool.ruff]
 line-length = 100
